got very basic posts to display now. Still have to finish it up.

--- a/dojochan/css/layout.css
+++ b/dojochan/css/layout.css
@@ -65,3 +65,8 @@ html {
 #board.hidden, #index.hidden, #notfound.hidden {
     display: none;
 }
+
+hr {
+    clear: both;
+    margin: 2em 1em 1em 2em;
+}
