--- a/dojochan/dojo/chan/widget/templates/Post.html
+++ b/dojochan/dojo/chan/widget/templates/Post.html
@@ -1,3 +1,10 @@
 <div class="chanPost">
-    <img src="" dojoAttachPoint="imageNode" />
+    <img src="" class="chanPostImage" dojoAttachPoint="imageNode" />
+    <div class="chanPostInfo">
+        <div class="chanPostTitle">
+            <div class=""></div>
+        </div>
+        <div class="chanPostMessage" dojoAttachPoint="messageNode"></div>
+    </div>
+    <div class="chanPostBottom"></div>
 </div>
