made it so that image thumbnails are shown, and then the full size is shown when clicked

--- a/dojochan/dojo/chan/widget/templates/Post.html
+++ b/dojochan/dojo/chan/widget/templates/Post.html
@@ -1,5 +1,5 @@
 <div class="chanPost">
-    <img src="" class="chanPostImage" dojoAttachPoint="imageNode" />
+    <img src="" class="chanPostImage" tabindex="-1" dojoAttachPoint="imageNode" />
     <div class="chanPostInfo">
         <div class="chanPostTitle">
             <div class=""></div>
