--- a/dojochan/dojo/chan/widget/templates/Post.html
+++ b/dojochan/dojo/chan/widget/templates/Post.html
@@ -1,10 +1,14 @@
 <div class="chanPost">
-    <img src="" class="chanPostImage" tabindex="-1" dojoAttachPoint="imageNode" />
-    <div class="chanPostInfo">
-        <div class="chanPostTitle">
-            <div class=""></div>
+    <div class="chanPostDoubledash">&gt;&gt;</div>
+    <div class="chanPostBody">
+        <img src="" class="chanPostImage" tabindex="-1" dojoAttachPoint="imageNode" />
+        <div class="chanPostInfo">
+            <div class="chanPostTitle">
+                <div class=""></div>
+            </div>
+            <div class="chanPostMessage" dojoAttachPoint="messageNode"></div>
         </div>
-        <div class="chanPostMessage" dojoAttachPoint="messageNode"></div>
+        <div class="chanPostBottom"></div>
+        <div class="chanPostAnchor"></div>
     </div>
-    <div class="chanPostBottom"></div>
 </div>
